--- a/Huawei UPS2000H/Huawei UPS2000H.yaml
+++ b/Huawei UPS2000H/Huawei UPS2000H.yaml
@@ -16,14 +16,14 @@ zabbix_export:
         - uuid: 135586b880634c83a8d07840abcdd223
           name: 'Number of active alarms'
           type: SNMP_AGENT
-          snmp_oid: 1.3.6.1.4.1.2011.6.174.1.12.2.0
+          snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.12.2.0]'
           key: huawei-ups.hwUpsAlarmCurrActiveNum
           delay: 5m
           description: 'Number of active alarms, ranging from 0 to 8000.'
         - uuid: 9f3670bcd6b242d7b211d2f042341f7f
           name: 'Number of devices in the system'
           type: SNMP_AGENT
-          snmp_oid: 1.3.6.1.4.1.2011.6.174.1.1.1.4.0
+          snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.1.1.4.0]'
           key: huawei-ups.hwUpsSysDeviceNum
           delay: 4h
           description: 'Number of devices in the system. An integer ranging from 0 to 63.'
@@ -101,7 +101,7 @@ zabbix_export:
         - uuid: 0f2ff8a4eca34ad9bde1bb894fafa42e
           name: 'Uptime (network)'
           type: SNMP_AGENT
-          snmp_oid: 1.3.6.1.2.1.1.3.0
+          snmp_oid: 'get[1.3.6.1.2.1.1.3.0]'
           key: 'system.net.uptime[sysUpTime.0]'
           delay: 30m
           trends: '0'
@@ -185,7 +185,7 @@ zabbix_export:
             - uuid: a72e523307b04a1e8915a4a36bc4761d
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Battery charge percentage'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.6.100.1.3.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.6.100.1.3.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsBattCharPrec[{#HWUPSDEVICEID}]'
               delay: 5m
               units: '%'
@@ -199,14 +199,14 @@ zabbix_export:
             - uuid: a2be4d0966bc4900959d91af1033eafa
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Battery discharge time'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.6.100.1.4.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.6.100.1.4.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsBattDischTime[{#HWUPSDEVICEID}]'
               delay: 5m
               units: s
             - uuid: a918bdec5ec2477389d9ba8608e16ba3
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Battery voltage'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.6.100.1.1.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.6.100.1.1.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsBattVolt[{#HWUPSDEVICEID}]'
               delay: 5m
               units: V
@@ -217,7 +217,7 @@ zabbix_export:
             - uuid: 767a530aea6e4d5793f2c5287509b1ac
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Input current'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.3.100.1.5.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.3.100.1.5.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsInCurr[{#HWUPSDEVICEID}]'
               delay: 5m
               value_type: FLOAT
@@ -229,7 +229,7 @@ zabbix_export:
             - uuid: 9836106e057d4957981902e4769bcd67
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Input frequency'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.3.100.1.4.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.3.100.1.4.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsInFr[{#HWUPSDEVICEID}]'
               delay: 5m
               value_type: FLOAT
@@ -241,7 +241,7 @@ zabbix_export:
             - uuid: d907e5b0428648d0ae6d14bbfb2b4750
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Internal temperature'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.2.101.1.4.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.2.101.1.4.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsIntTemper[{#HWUPSDEVICEID}]'
               delay: 5m
               units: ℃
@@ -259,7 +259,7 @@ zabbix_export:
             - uuid: 1704c2334a7149678860be56439b1edc
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Input voltage'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.3.100.1.1.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.3.100.1.1.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsInVolt[{#HWUPSDEVICEID}]'
               delay: 5m
               value_type: FLOAT
@@ -287,7 +287,7 @@ zabbix_export:
             - uuid: e79aca076e56454ab9e6024f00145eb6
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Load rate'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.4.100.1.14.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.4.100.1.14.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsLoadRate[{#HWUPSDEVICEID}]'
               delay: 5m
               value_type: FLOAT
@@ -306,7 +306,7 @@ zabbix_export:
             - uuid: 29cd352a3d2e4689b8c7d96b4466020f
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Output active power'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.4.100.1.8.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.4.100.1.8.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsOutApow[{#HWUPSDEVICEID}]'
               delay: 5m
               units: W
@@ -317,7 +317,7 @@ zabbix_export:
             - uuid: 40e727e8c0be44d9b0494c90564734fc
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Output current'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.4.100.1.4.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.4.100.1.4.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsOutCurr[{#HWUPSDEVICEID}]'
               delay: 5m
               value_type: FLOAT
@@ -329,7 +329,7 @@ zabbix_export:
             - uuid: dafed4b06b61491f85c49edc53bdf4b8
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Output full power'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.4.100.1.11.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.4.100.1.11.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsOutFpow[{#HWUPSDEVICEID}]'
               delay: 5m
               units: W
@@ -340,7 +340,7 @@ zabbix_export:
             - uuid: f4aa291c11514d3d8bcc6c2a113c7a67
               name: '{#HWUPSDEVICETYPE}-{#HWUPSDEVICEID} Output voltage'
               type: SNMP_AGENT
-              snmp_oid: '1.3.6.1.4.1.2011.6.174.1.4.100.1.1.{#HWUPSDEVICEID}'
+              snmp_oid: 'get[1.3.6.1.4.1.2011.6.174.1.4.100.1.1.{#HWUPSDEVICEID}]'
               key: 'huawei-ups-hwUpsOutVolt[{#HWUPSDEVICEID}]'
               delay: 5m
               value_type: FLOAT
